--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
     <title>Einkommenssteuer-Tool</title>
   </head>
   <body>
-    <form>
+    <div class="form">
       <h2>Einkommenssteuer Berechnen</h2>
       <select
         style="width: 100%; height: 50px"
-        name="genre"
-        id="genre"
+        name="year"
+        id="year"
         aria-placeholder="Berechnungsjahr aussuchen..."
       >
         <option value="year23">Jahr 2023</option>
         <option value="year24">Jahr 2024</option>
       </select>
 
-      <label for="number" id="year"
-        >Bitte geben Sie ihr Einkommen für 2023 ein:</label
-      >
-      <input type="text" id="number" />
-
-      <p id="output"></p>
-    </form>
+      <h3>Bitte geben Sie ihr Einkommen ein:</h3>
+      <input type="text" id="user-input" />
+      <button id="submit">Senden</button>
+      <div id="output"></div>
+    </div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
